--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,6 +21,18 @@
   --purple-800: #6f48c9;
 }
 
+@media(max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media(max-width: 720px) {
+  html {
+    font-size: 97.5%;
+  }
+}
+
 body {
   background-color: var(--gray-50);
 }
