--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,7 +25,7 @@
   footer {
     align-self: stretch;
 
-    &.empty {
+    &.empty .progress {
       opacity: 0.5;
     }
   }
@@ -108,7 +108,8 @@
     transition: filter 0.2s;
 
     &:disabled {
-      cursor: not-allowed;
+      cursor: default;
+      opacity: 0.5;
     }
 
     &:hover:not(:disabled) {
